--- a/app1/templates/app1/page2.html
+++ b/app1/templates/app1/page2.html
@@ -66,7 +66,7 @@
 
         function submit() {
             var adjustedPoints = points.map(function(point) {
-                return [Math.round(point[0] * xratio), Math.round(point[1] * yratio)];
+                return [Math.round(point[0] ), Math.round(point[1] )];
             });
             fetch('/scan/update-points/', {
                 method: 'POST',
