--- a/app1/templates/app1/page3.html
+++ b/app1/templates/app1/page3.html
@@ -1,2 +1,14 @@
-서버로 좌표전달 완료 
-페이지 전환 완료
+<!-- page3.html -->
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Received Image</title>
+</head>
+<body>
+    서버로 좌표전달 완료 
+    페이지 변환 완료 
+    안됨
+    <h1>Transformed Image</h1>
+    <img src="{{ MEDIA_URL }}received_image.jpg" alt="Transformed Image">
+</body>
+</html>
